Set build target: JDK 8